Convert subscription plans to responsive carousel with navigation buttons, touch/swipe support, and glassmorphic styling

--- a/public/finisher-app.html
+++ b/public/finisher-app.html
@@ -460,8 +460,13 @@
                 <h2>Subscription Required</h2>
                 <p>Access to The Finisher requires an active CreatorSync subscription.</p>
 
-                <div class="subscription-plans">
-                    <div class="plan-card starter">
+                <div class="subscription-carousel-wrapper">
+                    <button class="carousel-scroll-btn left" id="scrollLeft" aria-label="Scroll left">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+
+                    <div class="subscription-plans-carousel">
+                        <div class="plan-card starter">
                         <h3>Starter</h3>
                         <div class="price">$9.99<span>/month</span></div>
                         <ul>
@@ -506,6 +511,11 @@
                             Contact Sales
                         </button>
                     </div>
+                    </div>
+
+                    <button class="carousel-scroll-btn right" id="scrollRight" aria-label="Scroll right">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
 
                 <p class="trial-notice">
