Transform auth navigation: add enhanced gradient Sign Up button with shimmer animation, sparkle icon, 'Free' badge, and improved Login button with slide effect

--- a/public/index.html
+++ b/public/index.html
@@ -77,8 +77,15 @@
             </div>
 
             <div class="nav-auth">
-                <button class="btn btn-outline" id="loginBtn" data-translate="nav.login">Login</button>
-                <button class="btn btn-secondary" id="signupBtn" data-translate="nav.signup">Sign Up</button>
+                <button class="btn btn-outline auth-btn-login" id="loginBtn" data-translate="nav.login">
+                    <i class="fas fa-sign-in-alt"></i>
+                    <span>Login</span>
+                </button>
+                <button class="btn btn-gradient-enhanced auth-btn-signup" id="signupBtn" data-translate="nav.signup">
+                    <span class="signup-text">Sign Up</span>
+                    <i class="fas fa-sparkles"></i>
+                    <span class="signup-badge">Free</span>
+                </button>
                 <div class="finisher-header-cta">
                     <span class="get-text">Get</span>
                     <a href="finisher-app.html" class="finisher-logo-nav-link" title="Open The Finisher">
