Add yearly subscription tiers with 20% discount and billing toggle for all three subscription plans

--- a/public/finisher-app.html
+++ b/public/finisher-app.html
@@ -460,6 +460,15 @@
                 <h2>Subscription Required</h2>
                 <p>Access to The Finisher requires an active CreatorSync subscription.</p>
 
+                <div class="billing-toggle">
+                    <span class="billing-label">Monthly</span>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="billingToggleFinisher">
+                        <span class="toggle-slider"></span>
+                    </label>
+                    <span class="billing-label">Yearly <span class="save-badge">Save 20%</span></span>
+                </div>
+
                 <div class="subscription-carousel-wrapper">
                     <button class="carousel-scroll-btn left" id="scrollLeft" aria-label="Scroll left">
                         <i class="fas fa-chevron-left"></i>
@@ -468,7 +477,11 @@
                     <div class="subscription-plans-carousel">
                         <div class="plan-card starter">
                         <h3>Starter</h3>
-                        <div class="price">$9.99<span>/month</span></div>
+                        <div class="price">
+                            <span class="amount" data-monthly="9.99" data-yearly="95.90">$9.99</span>
+                            <span>/month</span>
+                        </div>
+                        <div class="yearly-total hidden">$95.90 billed annually</div>
                         <ul>
                             <li>Basic audio processing</li>
                             <li>5GB cloud storage</li>
@@ -483,7 +496,11 @@
                     <div class="plan-card pro featured">
                         <div class="featured-badge">Most Popular</div>
                         <h3>Pro</h3>
-                        <div class="price">$29.99<span>/month</span></div>
+                        <div class="price">
+                            <span class="amount" data-monthly="29.99" data-yearly="287.90">$29.99</span>
+                            <span>/month</span>
+                        </div>
+                        <div class="yearly-total hidden">$287.90 billed annually</div>
                         <ul>
                             <li>Advanced audio processing</li>
                             <li>100GB cloud storage</li>
@@ -498,7 +515,11 @@
 
                     <div class="plan-card enterprise">
                         <h3>Enterprise</h3>
-                        <div class="price">$99.99<span>/month</span></div>
+                        <div class="price">
+                            <span class="amount" data-monthly="99.99" data-yearly="959.90">$99.99</span>
+                            <span>/month</span>
+                        </div>
+                        <div class="yearly-total hidden">$959.90 billed annually</div>
                         <ul>
                             <li>Professional audio suite</li>
                             <li>Unlimited storage</li>
