Convert sliding toggle to button toggle with animated gradient backgrounds and enhanced active states

--- a/public/index.html
+++ b/public/index.html
@@ -277,12 +277,11 @@
                     </div>
 
                     <div class="billing-toggle">
-                        <span class="billing-label">Monthly</span>
-                        <label class="toggle-switch">
-                            <input type="checkbox" id="billingToggle">
-                            <span class="toggle-slider"></span>
-                        </label>
-                        <span class="billing-label">Yearly <span class="save-badge">Save 20%</span></span>
+                        <button class="billing-btn active" data-period="monthly">Monthly</button>
+                        <button class="billing-btn" data-period="yearly">
+                            Yearly
+                            <span class="save-badge">Save 20%</span>
+                        </button>
                     </div>
 
                     <div class="subscription-plans">
