--- a/public/finisher-app.html
+++ b/public/finisher-app.html
@@ -461,12 +461,11 @@
                 <p>Access to The Finisher requires an active CreatorSync subscription.</p>
 
                 <div class="billing-toggle">
-                    <span class="billing-label">Monthly</span>
-                    <label class="toggle-switch">
-                        <input type="checkbox" id="billingToggleFinisher">
-                        <span class="toggle-slider"></span>
-                    </label>
-                    <span class="billing-label">Yearly <span class="save-badge">Save 20%</span></span>
+                    <button class="billing-btn active" data-period="monthly">Monthly</button>
+                    <button class="billing-btn" data-period="yearly">
+                        Yearly
+                        <span class="save-badge">Save 20%</span>
+                    </button>
                 </div>
 
                 <div class="subscription-carousel-wrapper">
