Add Japanese, Chinese, and Russian language options with complete translations

--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,9 @@
                         <option value="es">🇪🇸 Español</option>
                         <option value="fr">🇫🇷 Français</option>
                         <option value="de">🇩🇪 Deutsch</option>
+                        <option value="ja">🇯🇵 日本語</option>
+                        <option value="zh">🇨🇳 中文</option>
+                        <option value="ru">🇷🇺 Русский</option>
                     </select>
                 </div>
             </div>
