Add comprehensive social media links with music streaming platforms (SoundCloud, Apple Music, YouTube Music, Amazon Music, Spotify) and social networks (TikTok, Instagram, Facebook, Snapchat, WhatsApp) featuring brand-specific gradient hover effects

--- a/public/index.html
+++ b/public/index.html
@@ -389,11 +389,25 @@
                 <div class="footer-section">
                     <h3>CreatorSync</h3>
                     <p>Proprietary platform for music monetization and collaboration.</p>
+                    
+                    <!-- Music Streaming Platforms -->
+                    <h4 class="social-category">Stream Our Artists</h4>
                     <div class="social-links">
-                        <a href="#" title="Follow us on Twitter" aria-label="Follow us on Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" title="Follow us on Instagram" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" title="Follow us on YouTube" aria-label="Follow us on YouTube"><i class="fab fa-youtube"></i></a>
-                        <a href="#" title="Follow us on SoundCloud" aria-label="Follow us on SoundCloud"><i class="fab fa-soundcloud"></i></a>
+                        <a href="#" title="Listen on SoundCloud" aria-label="Listen on SoundCloud"><i class="fab fa-soundcloud"></i></a>
+                        <a href="#" title="Listen on Apple Music" aria-label="Listen on Apple Music"><i class="fab fa-apple"></i></a>
+                        <a href="#" title="Listen on YouTube Music" aria-label="Listen on YouTube Music"><i class="fab fa-youtube"></i></a>
+                        <a href="#" title="Listen on Amazon Music" aria-label="Listen on Amazon Music"><i class="fab fa-amazon"></i></a>
+                        <a href="#" title="Listen on Spotify" aria-label="Listen on Spotify"><i class="fab fa-spotify"></i></a>
+                    </div>
+                    
+                    <!-- Social Networks -->
+                    <h4 class="social-category">Follow Us</h4>
+                    <div class="social-links">
+                        <a href="#" title="Follow on TikTok" aria-label="Follow on TikTok"><i class="fab fa-tiktok"></i></a>
+                        <a href="#" title="Follow on Instagram" aria-label="Follow on Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" title="Follow on Facebook" aria-label="Follow on Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="#" title="Follow on Snapchat" aria-label="Follow on Snapchat"><i class="fab fa-snapchat"></i></a>
+                        <a href="#" title="Chat on WhatsApp" aria-label="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
 
