--- a/public/index.html
+++ b/public/index.html
@@ -389,34 +389,34 @@
                 <div class="footer-section">
                     <h3>CreatorSync</h3>
                     <p>Proprietary platform for music monetization and collaboration.</p>
-                    
+
                     <!-- Music Streaming Platforms -->
                     <h4 class="social-category">Stream Our Artists</h4>
                     <div class="social-links">
-                        <a href="#" title="Listen on SoundCloud" aria-label="Listen on SoundCloud"><i class="fab fa-soundcloud"></i></a>
-                        <a href="#" title="Listen on Apple Music" aria-label="Listen on Apple Music"><i class="fab fa-apple"></i></a>
-                        <a href="#" title="Listen on YouTube Music" aria-label="Listen on YouTube Music"><i class="fab fa-youtube"></i></a>
-                        <a href="#" title="Listen on Amazon Music" aria-label="Listen on Amazon Music"><i class="fab fa-amazon"></i></a>
-                        <a href="#" title="Listen on Spotify" aria-label="Listen on Spotify"><i class="fab fa-spotify"></i></a>
+                        <a href="https://soundcloud.com/creatorsync" target="_blank" rel="noopener" title="Find us on SoundCloud" aria-label="Find us on SoundCloud"><i class="fab fa-soundcloud"></i></a>
+                        <a href="https://music.apple.com/creatorsync" target="_blank" rel="noopener" title="Find us on Apple Music" aria-label="Find us on Apple Music"><i class="fab fa-apple"></i></a>
+                        <a href="https://music.youtube.com/creatorsync" target="_blank" rel="noopener" title="Find us on YouTube Music" aria-label="Find us on YouTube Music"><i class="fab fa-youtube"></i></a>
+                        <a href="https://music.amazon.com/creatorsync" target="_blank" rel="noopener" title="Find us on Amazon Music" aria-label="Find us on Amazon Music"><i class="fab fa-amazon"></i></a>
+                        <a href="https://open.spotify.com/creatorsync" target="_blank" rel="noopener" title="Find us on Spotify" aria-label="Find us on Spotify"><i class="fab fa-spotify"></i></a>
                     </div>
                     
                     <!-- Social Networks -->
                     <h4 class="social-category">Follow Us</h4>
                     <div class="social-links">
-                        <a href="#" title="Follow on TikTok" aria-label="Follow on TikTok"><i class="fab fa-tiktok"></i></a>
-                        <a href="#" title="Follow on Instagram" aria-label="Follow on Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" title="Follow on Facebook" aria-label="Follow on Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" title="Follow on Snapchat" aria-label="Follow on Snapchat"><i class="fab fa-snapchat"></i></a>
-                        <a href="#" title="Chat on WhatsApp" aria-label="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://tiktok.com/@creatorsync" target="_blank" rel="noopener" title="Follow on TikTok" aria-label="Follow on TikTok"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://instagram.com/creatorsync" target="_blank" rel="noopener" title="Follow on Instagram" aria-label="Follow on Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://facebook.com/creatorsync" target="_blank" rel="noopener" title="Follow on Facebook" aria-label="Follow on Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="https://twitter.com/creatorsync" target="_blank" rel="noopener" title="Follow on Twitter/X" aria-label="Follow on Twitter/X"><i class="fab fa-twitter"></i></a>
+                        <a href="https://wa.me/creatorsync" target="_blank" rel="noopener" title="Chat on WhatsApp" aria-label="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     </div>
-                </div>
 
-                <div class="footer-section">
-                    <h4>Platform</h4>
-                    <ul>
-                        <li><a href="#beats">Browse Beats</a></li>
-                        <li><a href="#upload">Upload Beats</a></li>
-                        <li><a href="#collaborate">Collaborate</a></li>
+                    <!-- Share Your Work -->
+                    <h4 class="social-category">Share Your Beats</h4>
+                    <p class="share-description">Increase your reach by sharing your beats across all platforms with one click.</p>
+                    <button class="btn btn-gradient-enhanced btn-share-global" onclick="window.shareManager?.openShareModal()">
+                        <i class="fas fa-share-alt"></i>
+                        <span>Share Your Work</span>
+                    </button>
                         <li><a href="#analytics">Analytics</a></li>
                     </ul>
                 </div>
@@ -627,6 +627,7 @@
     <script src="js/carousel.js"></script>
     <script src="js/animations.js"></script>
     <script src="js/translation.js"></script>
+    <script src="js/share.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
