Add subscription protection to MixMaster1 - require Pro or Enterprise tier, add PRO+ badge to nav, display MixMaster1 access in Pro/Enterprise plan features, implement authentication check with subscription modal

--- a/public/index.html
+++ b/public/index.html
@@ -61,12 +61,12 @@
                             <p>Buy & sell exclusive beats</p>
                         </div>
                     </a>
-                    <a href="mixmaster1-app.html" class="nav-card" data-translate="nav.mixmaster">
+                    <a href="mixmaster1-app.html" class="nav-card nav-card-premium" id="mixmasterNavLink" data-translate="nav.mixmaster">
                         <div class="nav-card-icon">
                             <img src="assets/mixmaster1-logo.png" alt="MixMaster1" class="mixmaster-logo logo-glow interactive-logo">
                         </div>
                         <div class="nav-card-content">
-                            <h3>MixMaster1</h3>
+                            <h3><span class="pro-badge">PRO+</span> MixMaster1</h3>
                             <p>Professional mixing suite</p>
                         </div>
                     </a>
@@ -357,6 +357,7 @@
                                 <li><i class="fas fa-check"></i> Advanced collaboration tools</li>
                                 <li><i class="fas fa-check"></i> Analytics dashboard</li>
                                 <li><i class="fas fa-check"></i> Revenue sharing benefits</li>
+                                <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
                             <button class="btn btn-primary subscribe-btn" data-plan="pro-yearly">Start Free Trial</button>
                         </div>
@@ -375,6 +376,7 @@
                                 <li><i class="fas fa-check"></i> White-label solutions</li>
                                 <li><i class="fas fa-check"></i> Custom integrations</li>
                                 <li><i class="fas fa-check"></i> Advanced revenue tools</li>
+                                <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
                             <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-monthly">Contact Sales</button>
                         </div>
@@ -394,6 +396,7 @@
                                 <li><i class="fas fa-check"></i> White-label solutions</li>
                                 <li><i class="fas fa-check"></i> Custom integrations</li>
                                 <li><i class="fas fa-check"></i> Advanced revenue tools</li>
+                                <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
                             <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-yearly">Contact Sales</button>
                         </div>
