Remove Contact Sales requirement - enable direct subscription for all plans. Add comprehensive User Guide section with 6-step onboarding and FAQ section with 10 common questions featuring accordion functionality

--- a/public/index.html
+++ b/public/index.html
@@ -378,7 +378,7 @@
                                 <li><i class="fas fa-check"></i> Advanced revenue tools</li>
                                 <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
-                            <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-monthly">Contact Sales</button>
+                            <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-monthly">Start Free Trial</button>
                         </div>
 
                         <div class="plan-card enterprise">
@@ -398,8 +398,176 @@
                                 <li><i class="fas fa-check"></i> Advanced revenue tools</li>
                                 <li><i class="fas fa-check" style="color: #8b5cf6;"></i> <strong>MixMaster1 access</strong></li>
                             </ul>
-                            <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-yearly">Contact Sales</button>
+                            <button class="btn btn-secondary subscribe-btn" data-plan="enterprise-yearly">Start Free Trial</button>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- User Guide Section -->
+    <section class="user-guide-section">
+        <div class="container">
+            <h2>Getting Started Guide</h2>
+            <p class="section-subtitle">Learn how to make the most of CreatorSync and start monetizing your music today</p>
+
+            <div class="guide-grid">
+                <div class="guide-card">
+                    <div class="guide-number">1</div>
+                    <div class="guide-icon"><i class="fas fa-user-plus"></i></div>
+                    <h3>Create Your Account</h3>
+                    <p>Sign up for free and set up your producer profile. Upload your avatar, add your bio, and connect your social media accounts to build your brand.</p>
+                    <a href="#signup" class="guide-link">Sign Up Now <i class="fas fa-arrow-right"></i></a>
+                </div>
+
+                <div class="guide-card">
+                    <div class="guide-number">2</div>
+                    <div class="guide-icon"><i class="fas fa-upload"></i></div>
+                    <h3>Upload Your Beats</h3>
+                    <p>Upload high-quality audio files (WAV, MP3, FLAC). Add metadata, tags, BPM, and key. Set your pricing - choose standard pricing or enable bidding for trending beats.</p>
+                    <a href="#beats" class="guide-link">Upload Beats <i class="fas fa-arrow-right"></i></a>
+                </div>
+
+                <div class="guide-card">
+                    <div class="guide-number">3</div>
+                    <div class="guide-icon"><i class="fas fa-dollar-sign"></i></div>
+                    <h3>Set Your Prices</h3>
+                    <p>Choose between standard fixed pricing or auction-style bidding. Enable trending status to boost visibility. Platform takes a 12.5% commission on all sales.</p>
+                    <a href="#finisher" class="guide-link">View Pricing <i class="fas fa-arrow-right"></i></a>
+                </div>
+
+                <div class="guide-card">
+                    <div class="guide-number">4</div>
+                    <div class="guide-icon"><i class="fas fa-users"></i></div>
+                    <h3>Collaborate & Share</h3>
+                    <p>Use real-time collaboration tools to work with other artists. Share your beats across all social media platforms with one click to maximize your reach.</p>
+                    <a href="#studio" class="guide-link">Start Collaborating <i class="fas fa-arrow-right"></i></a>
+                </div>
+
+                <div class="guide-card">
+                    <div class="guide-number">5</div>
+                    <div class="guide-icon"><i class="fas fa-crown"></i></div>
+                    <h3>Upgrade to The Finisher</h3>
+                    <p>Unlock Pro features including MixMaster1 mixing suite, advanced audio processing, 100GB+ storage, priority support, and enhanced revenue tools.</p>
+                    <a href="#finisher" class="guide-link">View Plans <i class="fas fa-arrow-right"></i></a>
+                </div>
+
+                <div class="guide-card">
+                    <div class="guide-number">6</div>
+                    <div class="guide-icon"><i class="fas fa-chart-line"></i></div>
+                    <h3>Track Your Growth</h3>
+                    <p>Monitor your earnings, track beat performance, analyze listener demographics, and optimize your catalog with our advanced analytics dashboard.</p>
+                    <a href="#analytics" class="guide-link">View Analytics <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section class="faq-section">
+        <div class="container">
+            <h2>Frequently Asked Questions</h2>
+            <p class="section-subtitle">Everything you need to know about CreatorSync</p>
+
+            <div class="faq-container">
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What is CreatorSync?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>CreatorSync is a comprehensive platform for music producers to monetize their beats, collaborate with artists in real-time, and grow their music business. We provide marketplace features, professional audio tools like The Finisher and MixMaster1, and powerful collaboration capabilities.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>How much does CreatorSync cost?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>CreatorSync offers multiple tiers: <strong>Starter</strong> ($9.99/month or $7.99/month yearly), <strong>Pro</strong> ($29.99/month or $23.99/month yearly) with MixMaster1 access, and <strong>Enterprise</strong> ($99.99/month or $79.99/month yearly) with all premium features. All plans include a free trial.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What is the platform commission rate?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>CreatorSync takes a <strong>12.5% commission</strong> on all beat sales. This covers payment processing, platform maintenance, and ongoing feature development. You keep 87.5% of every sale.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What's the difference between standard pricing and bidding?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p><strong>Standard pricing</strong> lets you set a fixed price for your beat. <strong>Bidding</strong> allows buyers to place bids, with a minimum bid price you set. Bidding beats can be marked as "trending" to increase visibility. Bidding typically results in higher final sale prices for in-demand beats.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What is MixMaster1 and who can access it?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>MixMaster1 is our professional audio mixing suite featuring multi-track editing, advanced EQ, effects, and high-quality audio export. It's exclusively available to <strong>Pro and Enterprise</strong> subscribers. The tool integrates seamlessly with The Finisher for complete music production workflow.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Can I collaborate with other producers in real-time?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Yes! CreatorSync offers real-time collaboration features including live project sharing, synchronized editing, real-time chat, version control, and secure file encryption. Multiple users can work on the same project simultaneously from anywhere in the world.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What file formats are supported?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>We support all major audio formats including <strong>WAV, MP3, FLAC, AIFF, OGG, and AAC</strong>. For best quality, we recommend uploading WAV or FLAC files. Our system automatically generates multiple format versions for streaming and download.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>How do I share my beats on social media?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Every beat has a share button that opens our ShareManager. You can instantly share to 13+ platforms including TikTok, Instagram, Facebook, Twitter, Spotify, Apple Music, SoundCloud, YouTube Music, Amazon Music, WhatsApp, Telegram, and more. Track share analytics in your dashboard.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Is there a free trial?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Yes! All subscription tiers (Starter, Pro, and Enterprise) include a <strong>free trial period</strong> so you can explore all features before committing. No credit card required for the trial. Cancel anytime during the trial with no charges.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
+                        <span>What languages does CreatorSync support?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>CreatorSync is available in <strong>7 languages</strong>: English, Spanish (Español), French (Français), German (Deutsch), Japanese (日本語), Chinese (中文), and Russian (Русский). Switch languages anytime using the selector in the navigation bar.</p>
                     </div>
                 </div>
             </div>
