Add category-specific icons to navigation cards, increase CreatorSync logo from 56px to 80px, and increase Finisher logo button from 80px to 100px for better readability

--- a/public/index.html
+++ b/public/index.html
@@ -27,16 +27,16 @@
                 <div class="nav-menu-carousel">
                     <a href="#beats" class="nav-card" data-translate="nav.beats">
                         <div class="nav-card-icon">
-                            <i class="fas fa-music"></i>
+                            <i class="fas fa-compact-disc"></i>
                         </div>
                         <div class="nav-card-content">
-                            <h3>Discover Beats</h3>
-                            <p>Explore thousands of premium tracks</p>
+                            <h3>Beats</h3>
+                            <p>Exclusive instrumentals</p>
                         </div>
                     </a>
                     <a href="#sounds" class="nav-card" data-translate="nav.sounds">
                         <div class="nav-card-icon">
-                            <i class="fas fa-drum"></i>
+                            <i class="fas fa-layer-group"></i>
                         </div>
                         <div class="nav-card-content">
                             <h3>Sound Packs</h3>
@@ -45,7 +45,7 @@
                     </a>
                     <a href="#studio" class="nav-card" data-translate="nav.studio">
                         <div class="nav-card-icon">
-                            <i class="fas fa-microphone-alt"></i>
+                            <i class="fas fa-sliders-h"></i>
                         </div>
                         <div class="nav-card-content">
                             <h3>Create Studio</h3>
@@ -54,7 +54,7 @@
                     </a>
                     <a href="#marketplace" class="nav-card" data-translate="nav.marketplace">
                         <div class="nav-card-icon">
-                            <i class="fas fa-store"></i>
+                            <i class="fas fa-shopping-cart"></i>
                         </div>
                         <div class="nav-card-content">
                             <h3>Marketplace</h3>
